# roguelike-demo

./: .gitignore  Cargo.toml  Makefile  rust-toolchain  test_cli.sh
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/engine/: mod.rs  state.rs
crates/core/src/engine/cards/: defend.rs  heal.rs  mod.rs  punch.rs  strike.rs
crates/core/src/engine/roles/: mod.rs  player.rs
crates/core/src/engine/roles/enemy/: mod.rs
crates/core/src/utils/: state.rs
crates/core/src/wasm/: mod.rs
src/: bin.rs  config.rs  lib.rs  test.rs
src/engine/: combat.rs  mod.rs  state.rs
src/engine/cards/: defend.rs  mod.rs
src/engine/roles/: enemy.rs  mod.rs  player.rs
src/engine/roles/enemy/: mod.rs
src/engine/roles/enemy/monster/: mod.rs  robot.rs  turkey.rs
src/wasm/: mod.rs
