[package]
name = "roguelike-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.91"
num-derive = "0.4.2"
num-traits = "0.2"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.8.5"
rand_core = "0.6.4"